<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="csp_jog_accu_suggested_speeds" Id="{6a8230fd-0182-01e0-00f9-01c69df79bff}">
    <Declaration><![CDATA[TYPE csp_jog_accu_suggested_speeds :
	STRUCT
		NO_UAXIS_SELECT_TO_JOG_SPEED:															LREAL := 0;
		SMTR61700_TRANSFER_INFEED_DEPTH_SPEED:													LREAL := 1.5;
		SMTR61710_TRANSFER_INFEED_WATERFALL_ADJUST_SPEED:										LREAL := 1;
		SMTR61720_SMTR61730_TRANSFER_ACCUMULATOR_DEPTH_AND_CONVEYOR_DEPTH_SPEED:				LREAL := 1;
		SMTR61510_CASE_TOP_RAIL_DEPTH_SPEED:													LREAL := 2;
		SMTR61430_SMTR61500_CASE_TOP_RAIL_LS_AND_OS_WIDTH_SPEED:								LREAL := 1;
		SMTR61210_SMTR61200_SMTR61420_CASE_FEED_SHUTTLE_TRANSPORT_AND_DISCHARGE_DEPTH_SPEED:	LREAL := 2;
		SMTR61220_CASE_FEED_MAGAZINE_LS_DEPTH_SPEED:											LREAL := 1;
		SMTR61230_CASE_FEED_MAGAZINE_OS_DEPTH_SPEED:											LREAL := 1;
		SMTR61300_CASE_LOADER_GUIDE_WIDTH_SPEED:												LREAL := 5;
		SMTR61410_CASE_GLUE_LS_LOWER_POSITION_SPEED:											LREAL := 3;
		SMTR61400_CASE_GLUE_LS_UPPER_POSITION_SPEED:											LREAL := 3;
		SMTR61330_CASE_GLUE_OS_LOWER_POSITION_SPEED:											LREAL := 3;
		SMTR61320_CASE_GLUE_OS_UPPER_POSITION_SPEED:											LREAL := 3;
		SMTR61310_CASE_GLUE_OS_WIDTH_SPEED:														LREAL := 3;
		
		(*Tie AccuChange axis list enum to each axis' suggested speed
		If accuchange jog list enum is changed, indices here must be adjusted accordingly*)
		Suggested_Speeds:	ARRAY[JOG_MANAGER_JOG_LIST_NONE..JOG_MANAGER_JOG_LIST_MAX] OF LREAL :=
			[NO_UAXIS_SELECT_TO_JOG_SPEED, //0
			SMTR61700_TRANSFER_INFEED_DEPTH_SPEED, //1
			SMTR61710_TRANSFER_INFEED_WATERFALL_ADJUST_SPEED, //2
			SMTR61720_SMTR61730_TRANSFER_ACCUMULATOR_DEPTH_AND_CONVEYOR_DEPTH_SPEED, //3
			0, //4 - csp_jog_list_AccUChange enum has no 4 value
			SMTR61510_CASE_TOP_RAIL_DEPTH_SPEED, //5
			SMTR61430_SMTR61500_CASE_TOP_RAIL_LS_AND_OS_WIDTH_SPEED, //6
			SMTR61210_SMTR61200_SMTR61420_CASE_FEED_SHUTTLE_TRANSPORT_AND_DISCHARGE_DEPTH_SPEED, //7
			SMTR61220_CASE_FEED_MAGAZINE_LS_DEPTH_SPEED, //8
			SMTR61230_CASE_FEED_MAGAZINE_OS_DEPTH_SPEED, //9
			SMTR61300_CASE_LOADER_GUIDE_WIDTH_SPEED, //10
			SMTR61410_CASE_GLUE_LS_LOWER_POSITION_SPEED, //11
			SMTR61400_CASE_GLUE_LS_UPPER_POSITION_SPEED, //12
			SMTR61330_CASE_GLUE_OS_LOWER_POSITION_SPEED, //13
			SMTR61320_CASE_GLUE_OS_UPPER_POSITION_SPEED, //14
			SMTR61310_CASE_GLUE_OS_WIDTH_SPEED]; //15
	
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>