<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="csp_jog_list_AccUChange" Id="{0ebfcf5f-6170-4596-8951-abf84e67def1}">
    <Declaration><![CDATA[TYPE csp_jog_list_AccUChange :
(	
	JOG_LIST_NO_UAXIS_SELECT_TO_JOG													:= 0,
	SMTR61700_TRANSFER_INFEED_DEPTH													:= 1,
	SMTR61710_TRANSFER_INFEED_WATERFALL_ADJUST										:= 2,
	SMTR61720_SMTR61730_TRANSFER_ACCUMULATOR_DEPTH_AND_CONVEYOR_DEPTH 				:= 3,
	SMTR61510_CASE_TOP_RAIL_DEPTH													:= 5,
	SMTR61430_SMTR61500_CASE_TOP_RAIL_LS_AND_OS_WIDTH								:= 6,
	SMTR61210_SMTR61200_SMTR61420_CASE_FEED_SHUTTLE_TRANSPORT_AND_DISCHARGE_DEPTH	:= 7,
	SMTR61220_CASE_FEED_MAGAZINE_LS_DEPTH											:= 8,
	SMTR61230_CASE_FEED_MAGAZINE_OS_DEPTH											:= 9,
	SMTR61300_CASE_LOADER_GUIDE_WIDTH												:= 10,
	SMTR61410_CASE_GLUE_LS_LOWER_POSITION											:= 11,
	SMTR61400_CASE_GLUE_LS_UPPER_POSITION											:= 12,
	SMTR61330_CASE_GLUE_OS_LOWER_POSITION											:= 13,
	SMTR61320_CASE_GLUE_OS_UPPER_POSITION											:= 14,
	SMTR61310_CASE_GLUE_OS_WIDTH													:= 15
) := JOG_LIST_NO_UAXIS_SELECT_TO_JOG;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>