<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="csp_jog_list_real" Id="{b58280b9-734a-4ff8-abad-896bfb5f180f}">
    <Declaration><![CDATA[TYPE csp_jog_list_real :
(	
	JOG_LIST_NO_RAXIS_SELECT_TO_JOG					:= 0,
	SMTR41323_TRANSFER_ACCUMULATOR_BELT				:= 1, 
	SMTR41223_TRANSFER_ACCUMULATOR_FINGER_LS		:= 2,
	SMTR41203_TRANSFER_ACCUMULATOR_FINGER_OS		:= 3,
	SMTR41103_TRANSFER_ACCUMULATOR_LIFT				:= 4,
	SMTR41503_TRANSFER_CROSSPUSHER_FOLLOWER			:= 10, 
	SMTR41423_TRANSFER_CROSSPUSHER_HORIZONTAL		:= 11,
	SMTR41523_TRANSFER_CROSSPUSHER_VERTICAL			:= 12,	
	SMTR41403_TRANSFER_UPSTACKER_DOWNSTREAM			:= 20,
	SMTR41303_TRANSFER_UPSTACKER_UPSTREAM			:= 21,
	SMTR2103_CASE_TRANSPORT_OS_LEADING				:= 22,
	SMTR2123_CASE_TRANSPORT_OS_TRAILING				:= 23,
    SMTR2203_CASE_TRANSPORT_LS_LEADING				:= 24,
	SMTR2223_CASE_TRANSPORT_LS_TRAILING				:= 25,
    SMTR26103_CASE_TOP_RAIL_SQUARING_LS_TRAILING	:= 26,
	SMTR26123_CASE_TOP_RAIL_SQUARING_LS_LEADING		:= 27,
    SMTR26003_CASE_TOP_RAIL_SQUARING_OS_TRAILING	:= 28,
	SMTR26023_CASE_TOP_RAIL_SQUARING_OS_LEADING		:= 29,
    SMTR2403_CASE_CLOSING_OS_HORIZONTAL				:= 30,
    SMTR2303_CASE_CLOSING_OS_UPPER					:= 31,
    SMTR2323_CASE_CLOSING_OS_LOWER					:= 32,
    SMTR2523_CASE_CLOSING_LS_HORIZONTAL				:= 33,
    SMTR2423_CASE_CLOSING_LS_UPPER					:= 34,
    SMTR2503_CASE_CLOSING_LS_LOWER					:= 35,
    SMTR10423_CASE_FC_LS_LOWER_FOLLWER				:= 36,
    SMTR10403_CASE_FC_LS_LOWER_SPREADER				:= 37,
    SMTR8123_CASE_FC_LS_LOWER_TRAILING_CLOSER   	:= 38,
	SMTR10303_CASE_FC_LS_UPPER_FOLLWER				:= 39,
    SMTR10323_CASE_FC_LS_UPPER_LEADING_MINOR_CLOSER := 40,
	SMTR10223_CASE_FC_LS_UPPER_SPREADER				:= 42,
	SMTR10123_CASE_FC_OS_LOWER_FOLLWER				:= 43,
    SMTR10103_CASE_FC_OS_LOWER_SPREADER				:= 44,
   	SMTR10023_CASE_FC_OS_UPPER_FOLLWER				:= 46,
    SMTR10003_CASE_FC_OS_UPPER_SPREADER				:= 48,
    SMTR8003_CASE_FEED_SHUTTLE_HORIZONTAL			:= 49,
	SMTR8023_CASE_FEED_SHUTTLE_VERTICAL 			:= 50,
    SMTR8323_CASE_LOADER_GUIDE_DOWNSTREAM			:= 51,
    SMTR8523_CASE_LOADER_GUIDE_LENGTH				:= 52,
    SMTR8223_CASE_LOEADER_GUIDE_UPSTREAM	  		:= 53,
    SMTR8503_CASE_LOADER_PUSHER						:= 54,
	SMTR12023_CASE_DISCHARGE_LS_SPEEDBELT			:= 55, 
	SMTR12003_CASE_DISCHARGE_OS_SPEEDBELT			:= 56
	
) := JOG_LIST_NO_RAXIS_SELECT_TO_JOG;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>