<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="csp_jog_list_virtual" Id="{f66869cf-44f5-4e5e-8507-3a90bae5f747}">
    <Declaration><![CDATA[TYPE csp_jog_list_virtual :
(	
	JOG_LIST_NO_VAXIS_SELECT_TO_JOG				:= 0,
	JOG_LIST_TRANSFER_VIRTUAL					:= 2, 
	JOG_LIST_TRANSFER_ACCUMULATOR_VIRTUAL		:= 12, 
	JOG_LIST_TRANSFER_CROSSPUSHER_VIRTUAL		:= 13,
	JOG_LIST_TRANSFER_UPSTACKER_VITUAL			:= 22,
	JOG_LIST_CSP_CASE_FEED_VIRTUAL				:= 31,
	JOG_LIST_CSP_CASE_TRANSPORT_VIRTUAL			:= 32,
	JOG_LIST_CSP_CASE_LOADER_VIRTUAL			:= 33,
	JOG_LIST_CSP_CASE_VIRTUAL					:= 34	
	
) := JOG_LIST_NO_VAXIS_SELECT_TO_JOG;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>